# BotChatGPT

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.py  start_bot.py
ai/: ai.py  ai_audio.py  context.py  settings.md  settings_prog.md  system.md  uni_agent.md  utils.py
ai/cook/: ai_cook.py  settings_cook.md
ai/default/: ai_default.py  uni_agent.md
ai/prog/: ai_prog.py  settings_prog.md
database/: connect.py  modeles.py  models.py
handlers/: commands.py  handlers.py  messages.py  utils.py  voice_processing.py
state/: __init__.py
